ADDED SEARCH BUTTON

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">DELFoodiePassenger</string>
     <string name="Open">Open</string>
     <string name="Close">Close</string>
+    <string name="enter_postal_code">Enter Postal Code</string>
+    <string name="search">Search</string>
 </resources>
