Implemented Google Maps, Polylines and Polyline onClickListener to choose different path. Color changes to the selected polyline also implemented successfully.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="Close">Close</string>
     <string name="enter_postal_code">Enter Postal Code</string>
     <string name="search">Search</string>
+    <string name="mapsApiKey">AIzaSyBv-e9tRLwIvp-bRAx5tY7LfWs8BlRpUz4</string>
     <string name="payments_show_name">Successfully received payment data for %s!</string>
     <string name="gateway_replace_name_example">"Gateway name set to \"example\" - please modify Constants.java and replace it with your own gateway."</string>
     <string name="googlepay_status_unavailable">Unfortunately, Google Pay is not available on this device.</string>
